<resources>
    <string name="app_name">HelloDemoApp</string>
    <string name="hello_world">Hello World!</string>
    <string name="log_in_with_facebook">Log in with Facebook</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up.</string>
    <string name="or">OR</string>
    <string name="get_help_signing_in">Get help signing in.</string>
    <string name="forgot_your_login_details">Forgot your login details?</string>
    <string name="log_in">Log In</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="instagram">Instagram</string>
    <string name="logo">Logo</string>
    <string name="username2">Username:</string>
    <string name="enter_username">Enter username</string>
    <string name="password2">Password:</string>
    <string name="enter_password">Enter password</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
</resources>