<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@drawable/gradient_background"
        android:padding="24dp">

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/instagram"-->
<!--            android:textSize="42sp"-->
<!--            android:textStyle="normal"-->
<!--            android:textColor="#ffffff"-->
<!--            android:fontFamily="cursive"-->
<!--            android:layout_marginTop="80dp" />-->
        <ImageView
            android:layout_width="260"
            android:layout_height="80dp"
            android:src="@drawable/instagram_logo"
            android:layout_marginTop="80dp"
            android:contentDescription="@string/instagram" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/username"
            android:background="@android:color/white"
            android:padding="12dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="#FFFFFF"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/password"
            android:background="@android:color/white"
            android:padding="12dp"
            android:layout_marginTop="12dp"
            android:inputType="textPassword"
            android:backgroundTint="#FFFFFF"
            android:textColor="#000000" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/log_in"
            android:layout_marginTop="16dp"
            android:textColor="#ffffff"
            android:enabled="false"
            android:background="@drawable/white_square_border" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_your_login_details"
                android:textColor="#ffffff"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_help_signing_in"
                android:textColor="#ffffff"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginStart="8dp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:layout_marginTop="24dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/login_facebook"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/log_in_with_facebook"
            android:textStyle="bold"
            android:layout_marginTop="12dp"
            android:textColor="#ffffff"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/facebook_icon"
            android:drawablePadding="0dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textColor="#ffffff"
            android:layout_marginTop="36dp"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="14sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>